--- a/src/styles/components/_project.scss
+++ b/src/styles/components/_project.scss
@@ -17,90 +17,98 @@
         text-transform: uppercase;
     }
 
-    .project-preview .project-item {
-        background: $dark-blue;
-        border-radius: 5px;
-        position: relative;
-        overflow: hidden;
-
-        .project-img {
+    .project-preview {
+        .loading-project {
+            display: flex;
             width: 100%;
-            height: 320px;
+            justify-content: space-between;
+        }
 
-            img {
+        .project-item {
+            background: $dark-blue;
+            border-radius: 5px;
+            position: relative;
+            overflow: hidden;
+
+            .project-img {
+                width: 100%;
+                height: 320px;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    border-radius: 5px;
+                    transition: transform 0.3s ease;
+                }
+            }
+
+            &:hover .project-img img {
+                transform: scale(1.1);
+            }
+
+            .hover-info {
+                position: absolute;
+                top: 0;
+                left: 0;
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
-                border-radius: 5px;
-                transition: transform 0.3s ease;
-            }
-        }
-
-        &:hover .project-img img {
-            transform: scale(1.1);
-        }
-
-        .hover-info {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.6);
-            color: white;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            padding: 30px;
-            opacity: 0;
-            transition: opacity 0.4s ease;
-
-            h3 {
-                font-size: 26px;
-                margin-bottom: 10px;
-                color: $blue-white;
-            }
-
-            .project-tech {
+                background-color: rgba(0, 0, 0, 0.6);
+                color: white;
                 display: flex;
-                flex-wrap: wrap;
-                gap: 1rem;
+                flex-direction: column;
+                justify-content: space-between;
+                padding: 30px;
+                opacity: 0;
+                transition: opacity 0.4s ease;
 
-                div {
-                    color: $bg-box-item;
-                    padding: 2px 12px;
-                    border-radius: 5px;
-                    background: $text-light-blue-pastel;
-
-                    &:nth-child(even) {
-                        background: $text-light-blue;
-                    }
+                h3 {
+                    font-size: 26px;
+                    margin-bottom: 10px;
+                    color: $blue-white;
                 }
-            }
 
-            .project-info {
-                .project-btn {
+                .project-tech {
                     display: flex;
-                    justify-content: space-between;
+                    flex-wrap: wrap;
+                    gap: 1rem;
 
-                    a {
-                        width: 80px;
-                        padding: 10px 15px;
+                    div {
+                        color: $bg-box-item;
+                        padding: 2px 12px;
                         border-radius: 5px;
-                        border: none;
-                        cursor: pointer;
-                        background: linear-gradient(110deg, #0ea7e9 55%, #0bcfd2);
-                        font-weight: bold;
-                        font-size: 16px;
-                        text-decoration: none;
-                        color: $blue-white;
+                        background: $text-light-blue-pastel;
+
+                        &:nth-child(even) {
+                            background: $text-light-blue;
+                        }
+                    }
+                }
+
+                .project-info {
+                    .project-btn {
+                        display: flex;
+                        justify-content: space-between;
+
+                        a {
+                            width: 80px;
+                            padding: 10px 15px;
+                            border-radius: 5px;
+                            border: none;
+                            cursor: pointer;
+                            background: linear-gradient(110deg, #0ea7e9 55%, #0bcfd2);
+                            font-weight: bold;
+                            font-size: 16px;
+                            text-decoration: none;
+                            color: $blue-white;
+                        }
                     }
                 }
             }
-        }
 
-        &:hover .hover-info {
-            opacity: 1;
+            &:hover .hover-info {
+                opacity: 1;
+            }
         }
     }
 }
