--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -7,5 +7,10 @@ footer {
 
     div {
         color: $blue-white;
+
+        a {
+            text-decoration: none;
+            color: #FFF;
+        }
     }
 }
